--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@
 APP_ENV=dev
 APP_SECRET=e73432c6262bdc42622d020f04c2d269
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+MESSENGER_TRANSPORT_DSN=amqp://root:root@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
