--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,22 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.0",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/messenger": "5.3.*",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/property-access": "5.3.*",
+        "symfony/property-info": "5.3.*",
         "symfony/runtime": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.33"
     },
     "config": {
         "optimize-autoloader": true,
