--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.2",
         "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.9",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
@@ -17,6 +21,7 @@
         "symfony/monolog-bundle": "^3.7",
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
+        "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/serializer": "5.3.*",
         "symfony/yaml": "5.3.*"
